--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,7 @@ dependencies {
 
     def dialogx_version = "0.0.49"
     implementation "com.kongzue.dialogx:DialogX:${dialogx_version}"
+
+
+    implementation 'com.amap.api:location:latest.integration'
 }
