实现时区的选择功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,8 @@
 
         </activity>
 
+        <activity android:name="com.test.sport.ui.activity.TimezoneActivity" />
+
 <!--        <meta-data android:name="com.amap.api.v2.apikey" android:value="ef147f95a0f34e9d12f7b78b34bd978e">-->
 
 <!--        </meta-data>-->
