--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,6 @@ dependencies {
 
     implementation 'com.baidu.lbsyun:BaiduMapSDK_Map:7.6.3' // 百度地图
     implementation 'com.baidu.lbsyun:BaiduMapSDK_Location:9.6.4'  // 百度定位
+
+    implementation 'com.google.android.material:material:1.5.0'
 }
