调整底部导航栏布局 移动设置功能位置 修改选择喜欢球队的逻辑

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,10 @@
 
         </activity>
 
+        <activity
+    android:name="com.test.sport.ui.activity.SettingActivity"
+    android:screenOrientation="portrait"/>
+
         <activity android:name="com.test.sport.ui.activity.TimezoneActivity" />
 
 <activity
