--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -25,9 +25,9 @@
     <!--用于申请调用A-GPS模块-->
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"></uses-permission>
     <!--如果设置了target >= 28 如果需要启动后台定位则必须声明这个权限-->
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <!--如果您的应用需要后台定位权限，且有可能运行在Android Q设备上,并且设置了target>28，必须增加这个权限声明-->
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
 
     <application
@@ -40,10 +40,10 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
             android:name="com.test.sport.ui.activity.SportActivity"
-            android:exported="false" >
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -51,18 +51,20 @@
 
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="wJrSDQcTm8QvMu7AwoBprzeSlpjWbljc" >
-        </meta-data>
-        <service android:name="com.baidu.location.f" android:enabled="true" android:process=":remote"> </service>
-        <service android:name="com.amap.api.location.APSService"></service>
+            android:value="wJrSDQcTm8QvMu7AwoBprzeSlpjWbljc"></meta-data>
 
+        <service
+            android:name="com.baidu.location.f"
+            android:enabled="true"
+            android:process=":remote"></service>
+        <service android:name="com.amap.api.location.APSService"></service>
 
 
         <activity
             android:name="com.test.sport.ui.activity.MainActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan|stateHidden"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -76,21 +78,21 @@
         </activity>
 
         <activity
-    android:name="com.test.sport.ui.activity.SettingActivity"
-    android:screenOrientation="portrait"/>
+            android:name="com.test.sport.ui.activity.SettingActivity"
+            android:screenOrientation="portrait" />
 
         <activity android:name="com.test.sport.ui.activity.TimezoneActivity" />
 
-<activity
-    android:name="com.test.sport.ui.activity.PreferenceActivity"
-    android:screenOrientation="portrait"
-    android:exported="false"/>
+        <activity
+            android:name="com.test.sport.ui.activity.PreferenceActivity"
+            android:screenOrientation="portrait"
+            android:exported="false" />
 
-<!--        <meta-data android:name="com.amap.api.v2.apikey" android:value="ef147f95a0f34e9d12f7b78b34bd978e">-->
+        <!--        <meta-data android:name="com.amap.api.v2.apikey" android:value="ef147f95a0f34e9d12f7b78b34bd978e">-->
 
-<!--        </meta-data>-->
+        <!--        </meta-data>-->
 
-<!--        <service android:name="com.amap.api.location.APSService"></service>-->
+        <!--        <service android:name="com.amap.api.location.APSService"></service>-->
 
     </application>
 
