--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,12 @@ android {
         exclude 'META-INF/ASL2.0'
         exclude("META-INF/*.kotlin_module")
     }
+
+    sourceSets {
+        main {
+            jniLibs.srcDir 'libs'
+        }
+    }
 }
 
 dependencies {
@@ -57,6 +63,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation files('libs\\BaiduLBS_Android.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -81,8 +88,10 @@ dependencies {
 
     implementation 'com.amap.api:location:latest.integration'
 
-    implementation 'com.baidu.lbsyun:BaiduMapSDK_Map:7.6.3' // 百度地图
-    implementation 'com.baidu.lbsyun:BaiduMapSDK_Location:9.6.4'  // 百度定位
+//    implementation 'com.baidu.lbsyun:BaiduMapSDK_Map:7.6.3' // 百度地图
+//    implementation 'com.baidu.lbsyun:BaiduMapSDK_Location:9.6.4'  // 百度定位
+//    implementation 'com.baidu.lbsyun:BaiduMapSDK_Search:7.6.3'
+//    implementation 'com.baidu.lbsyun:BaiduMapSDK_Util:7.6.3'
 
     implementation 'com.google.android.material:material:1.5.0'
 }
